# compiler-i-lang

./: CMakeLists.txt  README.md  lexer.l  parser.ypp
include/: AST.hpp  codegen.hpp  comment_file.hpp  getNextToken.hpp  remove_comments.hpp  semanticAnalyser.hpp  token.hpp
source_programs/: test1.i  test10.i  test11.i  test12.i  test13.i  test2.i  test3.i  test4.i  test5.i  test6.i  test7.i  test8.i  test9.i
src/: AST.cpp  casting.cpp  codegen.cpp  comment_file.cpp  counter_scope.cpp  getNextToken.cpp  insertionValues.cpp  main.cpp  remove_comments.cpp  semanticAnalyser.cpp  token.cpp
